add appspec goodies for codedeploy

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,14 @@ files:
     destination: /home/ec2-user
 hooks:
   BeforeInstall:
-    - location: scripts/install_dependencies
+    - location: code-deploy/install_dependencies
       timeout: 300
       runas: root
-    - location: scripts/start_server
+    - location: code-deploy/start_server
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server
+    - location: code-deploy/stop_server
       timeout: 300
       runas: root
 
