--- a/appspec.yml
+++ b/appspec.yml
@@ -8,9 +8,10 @@ hooks:
     - location: code-deploy/install_dependencies
       timeout: 300
       runas: root
-    - location: code-deploy/start_server
-      timeout: 300
-      runas: root
+  ApplicationStart:
+      - location: code-deploy/start_server
+        timeout: 300
+        runas: root
   ApplicationStop:
     - location: code-deploy/stop_server
       timeout: 300
