--- a/appspec.yml
+++ b/appspec.yml
@@ -7,14 +7,16 @@ hooks:
   BeforeInstall:
     - location: code-deploy/clean
       timeout: 300
-      runas: root
+      runas: ec2-user
     - location: code-deploy/install_dependencies
       timeout: 300
-      runas: root
+      runas: ec2-user
   ApplicationStart:
     - location: code-deploy/start_server
       timeout: 300
+      runas: ec2-user
   ApplicationStop:
     - location: code-deploy/stop_server
       timeout: 300
+      runas: ec2-user
 
