--- a/appspec.yml
+++ b/appspec.yml
@@ -10,7 +10,7 @@ hooks:
       runas: root
     - location: code-deploy/install_dependencies
       timeout: 300
-      runas: ec2-user
+      runas: root
   ApplicationStart:
     - location: code-deploy/start_server
       timeout: 300
